# haskell

./: Applicative.md  Attoparsec.md  Cabal.md  EOPL.md  Functor.md  Guards.md  HighOrderFunction.md  Megaparsec.md  Monad.md  Monoid.md  Parsec.md  README.md  Recursion.md  Stack.md  State-Monad.hs  Type.md  TypeClass.md  TypeDeclaration.md  Where.md  Zipper.md  haskell.code-workspace  keyword.md  newtype-State-Monad.hs  newtype.md  workspace.md
01-basics/: README.md
03-recursion-hof/: README.md
05-io-monad/: README.md
AlexHappy/: .gitignore  Lexer.x  Main.hs  Parser.y
Basic/: Q.hs  TODO.md
Basic/01-basics/: README.md
Basic/01-basics/basics-project/: CHANGELOG.md  README.md  basics-project.cabal  package.yaml
Basic/01-basics/basics-project/src/: Lib.hs
Basic/02-lists-patterns/: README.md
Basic/02-lists-patterns/lists-project/: CHANGELOG.md  lists-project.cabal  package.yaml
Basic/02-lists-patterns/lists-project/src/: Lib.hs
Basic/03-recursion-hof/recursion-project/: CHANGELOG.md  README.md  package.yaml  recursion-project.cabal
Basic/03-recursion-hof/recursion-project/src/: Lib.hs
Basic/04-typeclasses-monads/: README.md
Basic/04-typeclasses-monads/monads-project/: CHANGELOG.md  README.md  monads-project.cabal  package.yaml
Basic/04-typeclasses-monads/monads-project/src/: Lib.hs
Basic/05-io-monad/io-project/: CHANGELOG.md  io-project.cabal  package.yaml
Basic/05-io-monad/io-project/src/: Lib.hs
Basic/06-modules-packages/: README.md
Basic/06-modules-packages/modules-project/: CHANGELOG.md  README.md  modules-project.cabal  package.yaml  stack.yaml
Basic/06-modules-packages/modules-project/src/: Lib.hs
Basic/07-advanced-types/: README.md
Basic/07-advanced-types/advanced-types-project/: CHANGELOG.md  README.md  advanced-types-project.cabal  package.yaml
Basic/07-advanced-types/advanced-types-project/src/: Lib.hs
Basic/08-concurrency/: README.md
Basic/08-concurrency/concurrency-project/: CHANGELOG.md  README.md  concurrency-project.cabal  package.yaml
Basic/08-concurrency/concurrency-project/src/: Lib.hs
Basic/09-web-development/: README.md
Basic/09-web-development/web-project/: CHANGELOG.md  package.yaml  web-project.cabal
Basic/09-web-development/web-project/src/: Lib.hs
Basic/10-final-project/: README.md
Basic/10-final-project/final-project/: final-project.cabal  package.yaml
Basic/10-final-project/final-project/src/: Lib.hs
DSL/Compiler/: .gitignore  Compiler.cabal  input.txt  stack.yaml
DSL/Compiler/app/: Main.hs
DSL/Enum/: README.md
DSL/enum-generator/: .gitignore  CHANGELOG.md  F12.md  README.md  enum-generator.cabal  example.txt  hie.yaml  package.yaml  stack.yaml
DSL/enum-generator/app/: Main.hs
DSL/enum-generator/src/: EnumDSL.hs  Lib.hs
EDSL/: ConfigDSL.hs  EDSL.cabal  EDSL.md  Main.hs  QueryDSL.hs  SimpleMath.hs  edslexample
FFI/: FFI.cabal  Makefile  README.md  cpp_functions.cpp  cpp_functions.h  haskell-to-cpp  haskell-to-cpp.hs
GADT/: AdvancedGADT.hs  BasicGADT.hs  ConfigGADT.hs  DSLGADT.hs  GADT  GADT.cabal  Main.hs  README.md
Interpreter/: Interpreter.hs  MonadicInterpreter.hs  Parser.hs  ParserForInterpreter.hs  StateMonadInterpreter.hs
Megaparsec/: CHANGELOG.md  LICENSE  README.md  megaparsec-learning.cabal  package.yaml
Megaparsec/examples/step1-basics/: 01_Structure.hs
Megaparsec/examples/step2-combinators/: 01_CombinatorsAndLexer.hs
Megaparsec/examples/step3-errors/: 01_ErrorsAndRecovery.hs
Megaparsec/examples/step4-structured/: 01_ASTAndExpr.hs
PDSL/: CHANGELOG.md  ConfigPDSL.hs  HaskellPDSL.hs  LICENSE  Main.hs  PDSL.cabal  PDSL.md  QueryPDSL.hs
Packet/: README.md
Packet/CapnProto/: .gitignore  CapnProto.cabal  TODO.md
Packet/CapnProto/examples/: addressbook.capnp  calculator.capnp  schema_evolution.capnp
Packet/CapnProto/src/: SimpleMain.hs
Packet/CapnProto/src/CapnProto/: SimpleCodeGen.hs  SimpleParser.hs  SimpleTypes.hs
Packet/FlatBuffers/: FlatBuffers.cabal  README.md  TODO.md
Packet/FlatBuffers/examples/: monster.fbs  reserved_words_test.fbs  schema_evolution.fbs
Packet/FlatBuffers/src/: SimpleMain.hs
Packet/FlatBuffers/src/FlatBuffers/: SimpleCodeGen.hs  SimpleParser.hs  SimpleTypes.hs
Packet/Protobuf/: .gitignore  Protobuf.cabal  README.md  TODO.md
Packet/Protobuf/examples/: camelcase_test.proto  minimal.hs  minimal.proto  person.proto  reserved_words_test.proto
Packet/Protobuf/src/: Main.hs  SimpleMain.hs
Packet/Protobuf/src/Protobuf/: AST.hs  CodeGen.hs  Parser.hs  Serialize.hs  SimpleCodeGen.hs  SimpleParser.hs  SimpleTypes.hs  Types.hs
Packet/Protobuf/tests/: CodeGenTest.hs  ParserTest.hs  SerializeTest.hs  Test.hs
Parsec/: CHANGELOG.md  LICENSE  README.md  package.yaml  parsec-learning.cabal
Parsec/examples/step1-basics/: 01_ParserType.hs  02_BasicCombinators.hs  03_ParseFunction.hs
Parsec/examples/step2-simple/: 01_NumberParsing.hs  02_StringParsing.hs  03_ListParsing.hs  04_WhitespaceHandling.hs
Parsec/examples/step3-structured/: 01_KeyValueParsing.hs  02_BracketParsing.hs  03_ASTGeneration.hs
Parsec/examples/step4-error-handling/: 01_Backtracking.hs  02_CustomErrorMessages.hs  03_TestingAndDebugging.hs
TemplateHaskell/: .gitignore  TH.hs  step1.hs  step2.hs  step3.hs  step4.hs  step5.hs
