cabal-version:      3.0
name:               EDSL
version:            0.1.0.0
description:        Simple EDSL examples
homepage:           https://github.com/example/EDSL
bug-reports:        https://github.com/example/EDSL/issues
author:             Your Name
maintainer:         your.email@example.com
copyright:          2024
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: CHANGELOG.md

executable EDSL
    main-is:            Main.hs
    other-modules:      SimpleMath
                       ,QueryDSL
                       ,ConfigDSL
    build-depends:      base >=4.14 && <4.20
                       ,containers >=0.6 && <0.7
    default-language:   Haskell2010
    ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-deriving-strategies -Wmissing-export-lists -Wmissing-import-lists -Wmissing-monadfail-instances -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wredundant-constraints -Wunused-packages -Wunused-type-patterns
