cabal-version:      3.0
name:               Protobuf
version:            0.1.0.0
synopsis:           Protocol Buffers DSL Packet Generator
description:        A Haskell DSL for parsing .proto files and generating type-safe serialization/deserialization code.
license:            MIT
license-file:       LICENSE
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-type-patterns
    default-language: GHC2021

executable protobuf-generator
    import:           warnings
    main-is:          SimpleMain.hs
    build-depends:
        base ^>=4.20.0.0,
        text,
        megaparsec,
        optparse-applicative,
        filepath,
        directory
    other-modules:
        Protobuf.SimpleParser,
        Protobuf.SimpleCodeGen,
        Protobuf.SimpleTypes
    hs-source-dirs:   src

test-suite protobuf-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:
        base ^>=4.20.0.0,
        text,
        megaparsec,
        template-haskell,
        prettyprinter,
        bytestring,
        binary,
        cereal,
        optparse-applicative,
        containers,
        mtl,
        hspec,
        quickcheck
    other-modules:
        Protobuf.Parser,
        Protobuf.AST,
        Protobuf.CodeGen,
        Protobuf.Serialize,
        Protobuf.Types,
        ParserTest,
        CodeGenTest,
        SerializeTest
    hs-source-dirs:   src, tests
